--- a/Algoritmo Grafo.ipynb
+++ b/Algoritmo Grafo.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Implemtation of the graph"
+    "# Implentation of the graph"
    ]
   },
   {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,6 +55,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialize the graph."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize graph.\n",
+    "G = nx.Graph()\n",
+    "\n",
+    "# Max distance from root.\n",
+    "max_distance_from_root = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define functions.\n",
+    "\n",
+    "\"\"\"\n",
+    "This functions return de node's hash.\n",
+    "\"\"\"\n",
+    "def getNodeHash(url): \n",
+    "    websiteHash = hashlib.sha256()\n",
+    "    websiteHash.update(url.encode())\n",
+    "    return websiteHash.hexdigest()\n",
+    "\n",
+    "\n",
+    "\"\"\"\n",
+    "This function add a new node to the global graph.\n",
+    "\"\"\"\n",
+    "def addNodeToGraph(website_info):\n",
+    "    \n",
+    "    # This indicates python that we will use a global variable defined previously.\n",
+    "    global G\n",
+    "    \n",
+    "    # Extract the Website info.\n",
+    "    website = Website(\n",
+    "        ID = website_info[0], \n",
+    "        url = website_info[1],\n",
+    "        content_type = website_info[2],\n",
+    "        language = website_info[3],\n",
+    "        urls = website_info[4],\n",
+    "        social_networks_urls = website_info[5],\n",
+    "        text = website_info[6], \n",
+    "        names = website_info[7],\n",
+    "        locations = website_info[8],\n",
+    "        iframes = website_info[9],\n",
+    "        organizations = website_info[10], \n",
+    "        dates = website_info[11],\n",
+    "        phonenumbers = website_info[12], \n",
+    "        images_urls = website_info[13],\n",
+    "        payment_accounts = website_info[14],\n",
+    "        emails = website_info[15]\n",
+    "    )\n",
+    "    \n",
+    "    # Add website to the graph.\n",
+    "    G.add_node(website)\n",
+    "    \n",
+    "    # Returns the website.\n",
+    "    return website\n",
+    "\n",
+    "\"\"\"\n",
+    "Once the first witness has explored the root, released more witnesses!\n",
+    "\"\"\"\n",
+    "def exploreGraph(website, root_witness):\n",
+    "    \n",
+    "    global max_distance_from_root\n",
+    "    \n",
+    "    # If agent is not to far from the initial root website of the explotation.\n",
+    "    if root_witness.getDistance() <= max_distance_from_root;\n",
+    "    \n",
+    "        # For every url in the website.\n",
+    "        for destination_url in website.getUrls():\n",
+    "\n",
+    "            # Initialize a new witness.\n",
+    "            new_witness = TheWitness(\n",
+    "                            origin_url = website.getUrl(), \n",
+    "                            destination_url = destination_url, \n",
+    "                            destination_hash = getNodeHash(destination_url), \n",
+    "                            root_witness.getDistance() + 1\n",
+    "                      )\n",
+    "            \n",
+    "            # Try to scrap this website!\n",
+    "            try:\n",
+    "                result = new_witness.scrap()\n",
+    "                \n",
+    "                # If this website was interesting.\n",
+    "                if result != -1:\n",
+    "                    \n",
+    "                    # Get new website.\n",
+    "                    new_website = addNodeToGraph(result)\n",
+    "                    \n",
+    "                    # Explore the finding of the new witness.\n",
+    "                    exploreGraph(new_website, new_witness)\n",
+    "                    \n",
+    "                # This website is not interesting.\n",
+    "                else: \n",
+    "                    pass\n",
+    "            \n",
+    "            # Some error arise when exploring this website: delete the witness.\n",
+    "            except:\n",
+    "                pass\n",
+    "                \n",
+    "            # Delete the witness.\n",
+    "            del new_witness"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An brief example of the algorithm."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -62,11 +186,12 @@
    },
    "outputs": [],
    "source": [
-    "G = nx.Graph()\n",
+    "# Initialize root and first witness.\n",
+    "root = \"https://dentalgomez.co/\"\n",
+    "witness = TheWitness(root, root, getNodeHash(root), 0)\n",
     "\n",
-    "url1 = \"https://dentalgomez.co/\"\n",
-    "witness = TheWitness(url1, url1, 1, 0)\n",
-    "result = witness.scrap()\n"
+    "# Scrap the root!\n",
+    "result = witness.scrap()"
    ]
   },
   {
@@ -76,13 +201,7 @@
     "scrolled": false
    },
    "outputs": [],
-   "source": [
-    "def addNode(result):\n",
-    "    website=Website(result[0], result[1],result[2],result[3],result[4], result[5],result[6], result[7],result[8],result[9],\n",
-    "                    result[10], result[11],result[12], result[13],result[14],result[15])\n",
-    "    G.add_node(website)\n",
-    "    return len(list(G.nodes))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -101,8 +220,8 @@
     }
    ],
    "source": [
-    "pos=addNode(result)-1\n",
-    "root=list(G.nodes)[pos]\n",
+    "pos= addNodeToGraph(result) - 1\n",
+    "root = list(G.nodes)[pos]\n",
     "root"
    ]
   },
@@ -416,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
